--- a/src/index.html
+++ b/src/index.html
@@ -5,6 +5,17 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>My App</title>
 </head>
+<script>
+var submitUrl = "https://test.com";
+var HTML1 = "<p>Hi there, <strong>{{first_name}}</strong>!</p>";
+
+const TOKENS = [
+  { title: "first name", slug: "first_name", id: "123" },
+  { title: "last name", slug: "last_name", id: "456" },
+  { title: "email address", slug: "email", id: "789" }
+];
+
+</script>
 <body>
   <div id="root_container_394"></div>
 </body>
